Fixed overflow issue

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -75,6 +75,6 @@
 
 @media screen and (max-width: 768px) {
   .library-container {
-    width: 100%;
+    width: 100vw;
   }
 }
